<resources>
    <string name="app_name">Panderma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_gambar">Upload Gambar</string>
    <string name="judul_post">Judul Post</string>
    <string name="deadline_butuh_donor">Deadline Butuh Donor</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="nol">0</string>
    <string name="jumlah_butuh_donor">jumlah butuh donor</string>
    <string name="jumlah_pendonor_yang_dibutuhkan">Jumlah Pendonor yang dibutuhkan</string>
    <string name="nomor_hp">No HP (harus ada WA)</string>
    <string name="lokasi">Lokasi</string>
    <string name="sisa_hari">   Sisa Hari</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="post">Post</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="satu">1</string>
    <string name="tidak_punya_akun">Tidak Punya Akun?</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="profil">Profil</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="perempuan">Perempuan</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="post_calon_pendonor">Post Calon Pendonor</string>
    <string name="simpan">Simpan</string>
    <string name="your_email">Your Email</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_birthdate">Your Birthdate</string>
    <string name="batalkan">Batalkan</string>
    <string name="ubah">Ubah</string>
    <string name="wa">wa</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="image_category">Image Catrgory</string>
    <string name="kategori">Kategori</string>
    <string name="calon_pendonor">Calon Pendonor</string>
    <string name="donor_mendesak">Donor Mendesak</string>
    <string name="cari">Cari . . . . </string>
    <string name="kembali">Kembali</string>
    <string name="ganti_foto_profil">Ganti Foto Profil</string>
    <string name="tidak_ada_internet">Tidak Ada Koneksi Internet</string>
    <string name="message_lupa_password">pengaturan ulang kata sandi telah dikirim ke email anda</string>

</resources>