<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.profiledit.ProfilEditFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgFotoProfil"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/profil"
                android:src="@drawable/img_profile"/>

            <TextView
                android:id="@+id/txtGantiFotoProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ganti_foto_profil"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#4F60FF"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:textColor="#FA7979"/>

            <EditText
                android:id="@+id/edtNamaEditProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:textColor="#FA7979"/>

            <EditText
                android:id="@+id/edtEmailEditProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_telepon"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:textColor="#FA7979"/>

            <EditText
                android:id="@+id/nomor_telepon_edit_profil_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_lahir"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:textColor="#FA7979"/>

            <EditText
                android:id="@+id/edtTanggalLahirEditProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:textColor="#FA7979"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/laki_laki"/>

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/perempuan"/>

            </LinearLayout>

            <Button
                android:id="@+id/simpan_button"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FA7979"
                android:text="@string/simpan"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <Button
                android:id="@+id/batalkan_button"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#A7A7A7"
                android:text="@string/batalkan"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="100dp"/>

        </LinearLayout>

    </FrameLayout>

</ScrollView>