<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.list.detail.ListDetailsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_imageview"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#E1DFDF"
                android:layout_marginTop="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/judul_post_detail_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_post"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/lokasi_detail_textview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:gravity="start"
                android:layout_marginStart="20dp"
                android:drawableStart="@drawable/img_lokasi"
                android:layout_marginTop="10dp"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pendonor_mendesak_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/satu"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/jumlah_pendonor_mendesak_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah_butuh_donor"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/sisa_hari_donor_mendesak_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sisa_hari"
                    android:layout_marginStart="40dp"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/img_jam"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/description_detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/wa_fab_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/img_wa"
            android:contentDescription="@string/wa"
            android:layout_margin="16dp" />

    </FrameLayout>

</ScrollView>