<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/framePostTawarkanDonor"
    tools:context=".posttawarkandonor.PostFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgPostImageTawarkanDonor"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/upload_gambar"
                android:src="@drawable/default_image_post"/>

            <Button
                android:id="@+id/btnPostImageTawarkanDonor"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#B5AFAF"
                android:text="@string/upload_gambar"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <TextView
                android:text="@string/judul_post"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtJudulPostTawarkanDonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <TextView
                android:text="@string/nomor_hp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtNoHpTawarkanDonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <TextView
                android:text="@string/lokasi"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtLokasiTawarkanDonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <Button
                android:id="@+id/btnPilihLokasiTawarkanDonor"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#B5AFAF"
                android:text="@string/pilih_lokasi"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <TextView
                android:text="@string/deskripsi"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtDeskripsiTawarkanDonor"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <Button
                android:id="@+id/btnPostTawarkanDonor"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FA7979"
                android:text="@string/post"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="100dp"/>

        </LinearLayout>

    </FrameLayout>

</ScrollView>