<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLupaKataSandi"
    tools:context=".presentation.forgotpassword.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:text="@string/email"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtEmailLupaKataSandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <TextView
            android:text="@string/message_lupa_password"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btnLupaPassword"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FA7979"
            android:text="@string/lupa_password"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

    </LinearLayout>

</FrameLayout>